--- a/public/style.css
+++ b/public/style.css
@@ -147,7 +147,7 @@ body::before{content: "";position: absolute;inset: 0;background: linear-gradient
 h1,h2,h3,h4,h5,h6{font-family: var(--title-font);}
 a{text-decoration: none;color: var(--light);transition: all .3s linear;}
 .btn{
-    border: 1px solid #f0b5472e;
+    border: 1px solid #f0b54769;
     padding: 12px 20px 12px;
     border-radius: var(--radius);
     font-size: 16px;
@@ -157,11 +157,145 @@ a{text-decoration: none;color: var(--light);transition: all .3s linear;}
     background: transparent;
     color: var(--light);
 }
+.newslist{display: grid;grid-template-columns: 2fr 1fr;padding: 10em 10% 5em;grid-gap: 50px;}
 
+.newslist aside {
+    position: sticky;
+    display: flex;
+    background: var(--dark);
+    padding: 2em 3em;
+}
+
+.newslist aside .container .sticky {
+    position: sticky;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    top: 0em;
+}
+
+.newslist aside .container .sticky {
+    position: sticky;
+    top: 10em;
+}
+
+.newslist aside .container .sticky h2 {
+    border-bottom: 1px solid #ffffff21;
+    padding-bottom: 5px;
+}
+
+.newslist aside .container .recent-posts {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.newslist aside .container .recent-posts .item .img {position: relative;overflow: hidden;border-radius: var(--border-radius);}
+
+.newslist aside .container .recent-posts .item {
+    border-radius: var(--border-radius);
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 100px;
+    grid-gap: 15px;
+    margin-bottom: 0px;
+}
+
+.newslist aside .container .recent-posts .item h3 {
+    font-weight: 100;
+    font-size: 15px;
+    letter-spacing: 1px;
+    text-wrap: balance;
+}
+
+.newslist aside .container .recent-posts .item .img img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    transition: all .3s linear;
+}
+
+.newslist aside .container .recent-posts .item:hover img {
+    transform: scale(1.5);
+}
+
+.newslist aside .container .sujets {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.newslist aside .container .sujets ul {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    line-height: 2.3;
+}
+
+.newslist aside .container .sujets ul li:hover {
+}
+
+.newslist aside .container .sujets ul li a {
+    color: var(--white);
+    opacity: .4;
+    transition: all .3s linear;
+    font-weight: 400;
+    padding: 8px 10px;
+    font-size: 13px;
+    transition: all .3s linear;
+    background: #ffffff29;
+}
+
+.newslist aside .container .sujets ul li a:hover {
+    opacity: 1;
+    color: var(--dark);
+    background: var(--light);
+}
+
+.newslist section.news {
+    padding: 0;
+    gap: 20px;
+    position: relative;
+}
+.newslist section.news .container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
+
+.pagination {
+    display: flex;
+    list-style: none;
+    gap: 20px;
+    margin-top: 40px;
+}
+
+.pagination li a {
+    transition: all .3s linear;
+    width: 50px;
+    height: 50px;
+    border: 1px solid #f6bb1445;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-weight: 700;
+}
+.pagination li a.active,.pagination li a:hover {
+    background: var(--light);
+    color: var(--dark);
+}
+.newslist .item-new{
+    width: 100%;
+}
+/* .newslist .item-new img{width: 100%;height: 100%;object-fit: cover;} */
 section.contact .container form button.btn {
     background: var(--light);
     color: var(--dark);
     padding: 20px 30px;
+    border: none;
+    font-weight: 600;
 }
 
 section.contact .container form button.btn:hover {
@@ -247,7 +381,7 @@ div.infos{display: flex;justify-content: space-between;padding: 10px 0%;gap: 20p
 div.infos .item{
     color: var(--white);
     flex-direction: row;
-    gap: 12px;
+    gap: 10px;
     /* background: #ffffff14; */
     backdrop-filter: blur(10px);
     border-radius: var(--border-radius);
@@ -271,8 +405,15 @@ div.infos .item span.ico{
 }
 
 section.contact .container div.infos .item span.ico {
-    width: 30px;
-    height: 30px;
+    width: auto;
+    height: auto;
+    background: transparent;
+    color: var(--white);
+    font-size: 17px;
+}
+
+section.contact .container div.infos .item span.ico:before {
+    background: transparent;
 }
 
 div.infos .item span.ico:before {
@@ -334,14 +475,14 @@ div.infos .item a {
     border-radius: var(--border-radius);
     animation: bounce 2s infinite alternate-reverse;
 }
-.banner.interne{background-image: url(../images/bandeau.jpeg);background-size: cover;background-position: right;background-attachment: fixed;position: relative;}
-.body-contact .banner.interne{background-image: url(../images/bg-contact.jpg);background-size: cover;background-position: right;background-attachment: fixed;position: relative;}
-.body-service .banner.interne{background-image: url(../images/bg-service.jpg);background-size: cover;background-position: right;background-attachment: fixed;position: relative;}
+.banner.interne{background-image: url(../images/bandeau.jpeg);background-size: cover;background-position: right;position: relative;}
+.body-contact .banner.interne{background-image: url(../images/bg-contact.jpg);background-size: cover;background-position: right;/* background-attachment: fixed; */position: relative;}
+.body-service .banner.interne{background-image: url(../images/bg-service.jpg);background-size: 100%;background-position: bottom;position: relative;}
 .banner.interne:before {
     content: "";
     position: absolute;
     inset: 0;
-    background: #00000094;
+    background: #000000a1;
 }
 @keyframes bounce{
     from{transform: translateY(-10px);}
@@ -369,42 +510,89 @@ div.infos .item a {
 
 main section{position: relative;padding: 4% 10%;z-index: 1;}
 
+section.contact {
+    padding-top: 6%;
+}
+
 section.contact .container {
     display: flex;
     gap: 2%;
     justify-content: space-between;
 }
 
-
+section.contact .container .img-bloc {
+    width: 40%;
+    border-radius: var(--border-radius);
+    height: auto;
+}
+section.newsletter{display: flex;flex-direction: column;align-items: center;gap: 20px;margin: 0;width: 100%;box-shadow: none;background: no-repeat;padding: 5em 10%;}
+section.newsletter .newsletter{width: 100%;margin: 0;}
 section.contact .container div.infos {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     margin: 0;
     border: 0;
-    justify-content: flex-start;
-    padding: 5%;
-    background: #ffffff14;
+    justify-content: center;
+    padding: 2% 4%;
+    background: #173709;
     backdrop-filter: blur(10px);
     width: 40%;
+    text-align: center;
 }
 
 section.contact .container div.infos .item {
     background: #f0f8ff00;
     backdrop-filter: none;
+    flex-direction: column;
+}
+
+section.contact .container div.infos .item table {
+    text-align: left;
+    padding-left: 20px;
+}
+
+section.contact .container div.infos .item table td {
+    font-size: 16px;
+    opacity: .5;
+}
+
+section.contact .container div.infos .item h3 {
+    font-size: 20px;
+    /* text-transform: uppercase; */
+    font-weight: 100;
+    letter-spacing: 2px;
+    color: var(--light);
+}
+section.contact .container div.infos .item .group{
+    display: flex;
+    gap: 12px;
+    font-size: 16px;
+    align-items: center;
+    opacity: .5;
+    justify-content: center;
+    text-align: center;
+}
+
+section.contact .container div.infos h2 {
+    font-size: 45px;
+    width: 100%;
+    border-bottom: 1px solid #ffffff29;
 }
 
 section.contact .container form input,section.contact .container form textarea {
     width: 100%;
     padding: 14px;
-    background: #c1c1c140;
+    background: #00000026;
     border: 1px solid #ffffff00;
     font-size: 16px;
     letter-spacing: 1px;
     font-family: var(--main-font);
+    color: var(--white);
 }
 section.contact .container form input:focus, section.contact .container form textarea:focus {
     outline: none;
+    background: #81818136;
 }
 
 textarea#message {
@@ -424,28 +612,16 @@ section.contact .container .form {
     position: relative;
     width: 60%;
     padding: 5%;
-    background-image: url(../images/contact.jpg);
-    background-color: #0000005b;
+    background: #173709;
     background-size: cover;
     background-blend-mode: soft-light;
     background-attachment: fixed;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     z-index: 1;
-}
-section.contact .container .form::before {
-    content: "";
-    position: absolute;
-    width: 90%;
-    height: 90%;
-    z-index: -1;
-    top: 5%;
-    left: 5%;
-    opacity: 1.2;
-    background: #00000080;
-    border-radius: 50px;
-    backdrop-filter: blur(5px);
+    border-radius: var(--border-radius);
+    backdrop-filter: blur(10px);
 }
 
 section.services {
@@ -480,7 +656,7 @@ section.servicelist .img-service img{
     object-fit: cover;
     padding: 8px;
     transition: all .3s linear;
-    background: var(--white);
+    background: #ffffff12;
 }
 
 section.servicelist .img-service:hover img {
@@ -500,7 +676,7 @@ main section .title{font-size: 18px;font-family: var(--main-font);color: var(--w
 h2.title.center {
     text-align: center;
 }
-main section .subtitle,section.contact .container h2{display: block;font-family: var(--title-font);font-size: var(--title-size);color: var(--light);font-weight: 900;line-height: 1.2;padding-bottom: 5px;font-style: normal;letter-spacing: 0px;position: relative;text-transform: uppercase;letter-spacing: 1px;}
+main section .subtitle{display: block;font-family: var(--title-font);font-size: var(--title-size);color: var(--light);font-weight: 900;line-height: 1.2;padding-bottom: 5px;font-style: normal;letter-spacing: 0px;position: relative;text-transform: uppercase;letter-spacing: 1px;}
 
 main section .title.center:before {left: 50%;transform: translate(-50%);}
 main section .subtitle.center,.center{text-align: center;}
@@ -540,6 +716,7 @@ main section.about .jumbotron:nth-child(2) span{background: rgba(255, 255, 255, 
     height: 700px;
     box-shadow: 10px 10px 1000px #00000038;
     position: relative;
+    overflow: hidden;
 }
 
 .img-bloc.flex:before {
@@ -558,6 +735,14 @@ main section.about .jumbotron:nth-child(2) span{background: rgba(255, 255, 255, 
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: var(--border-radius);
+    transition: all .3s linear;
+    filter: brightness(1);
+}
+
+.img-bloc:hover img {
+    transform: scale(1.2);
+    filter: brightness(0.6);
 }
 main section.services .services-list {overflow: hidden;position: relative;}
 
@@ -691,7 +876,7 @@ main section.atout .container{
 section#testimony{
     font-family: var(--main-font), sans-serif;
     display: flex;
-    padding-bottom: 12em;
+    padding-bottom: 10em;
     line-height: 1.2;
   }
   .blog-slider {
@@ -721,7 +906,6 @@ section#testimony{
   .blog-slider__item.swiper-slide-active .blog-slider__content > * {
     opacity: 1;
     transform: none;
-    font-size: 20px;
   }
   .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(1) {
     transition-delay: 0.3s;
@@ -914,7 +1098,7 @@ section#testimony{
 .default-card p {
     font-size: 14px;
 }
-section.tarifs{gap: 70px;display: flex;flex-direction: column;}
+section.tarifs{gap: 40px;display: flex;flex-direction: column;}
 
 section.tarifs .title {
     text-align: center;
@@ -933,10 +1117,9 @@ section.tarifs .container{
     text-align: center;
     width: 30%;
     box-shadow: 10px 10px 40px #00000059;
+    padding-bottom: 60px;
 }
 
-.tarif-card:nth-child(2) {
-}
 
 .tarif-card h4 {
     color: var(--light);
@@ -992,7 +1175,7 @@ section.cases .controls{
     display: flex;
     gap: 10px;
     justify-content: center;
-    backdrop-filter: blur(100px);
+    backdrop-filter: blur(10px);
     flex-wrap: wrap;
   }
 
@@ -1032,7 +1215,7 @@ section.cases button{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     overflow: hidden;
-    grid-gap: 40px;
+    grid-gap: 20px;
     min-height: 400px;
   }
   
@@ -1047,13 +1230,21 @@ section.cases button{
     object-fit: cover;
     height: 100%;
     position: absolute;
+    transition: all .3s linear;
+}
+
+.img-content:hover img {
+    transform: scale(1.2);
+    filter: brightness(0.6);
 }
   
   section.cases .container .mix{
     text-align: left;
-    background: #0000002b;
+    background: #ffffff08;
     display: none;
-    padding: 20px;
+    padding: 20px 20px 30px;
+    border-radius: var(--border-radius);
+    backdrop-filter: blur(10px);
   }
 
 .mix .default-card {
@@ -1062,10 +1253,9 @@ section.cases button{
     background: transparent;
     align-items: flex-start;
     box-shadow: none;
-    backdrop-filter: blur(0px);
     border: 0;
 }
-.mix .default-card .btn{border: 0;padding: 10px 20px;border: 1px solid #f6bb143d;}
+.mix .default-card .btn{border: 0;padding: 5px 20px;border: 1px solid #f6bb143d;}
 .mix .default-card:hover {
     border: none;
     background: transparent;
@@ -1190,8 +1380,13 @@ section.news{display: flex;flex-direction: column;align-items: center;gap: 50px;
 section.news .title {text-align: center;}
 section.news .container {display: flex;gap: 4%;}
 .item-new {width: 30%;display: flex;flex-direction: column;border-radius: var(--border-radius);overflow: hidden;background: var(--dark);}
-.img-new {height: 300px;}
-.img-new img {width: 100%;height: 100%;object-fit: cover;}
+.img-new {height: 300px;overflow: hidden;}
+.img-new img {width: 100%;height: 100%;object-fit: cover;transition: all .3s linear;filter: brightness(1);}
+
+.img-new:hover img {
+    transform: scale(1.2);
+    filter: brightness(0.6);
+}
 .new-body {padding: 30px 30px;display: flex;flex-direction: column;gap: 10px;font-weight: 200;letter-spacing: 1.5px;}
 .new-body .date {color: var(--light);letter-spacing: 2px;font-weight: 300;font-size: 16px;}
 section.map{display: flex;flex-direction: column;align-items: center;justify-content: center;gap: 3em;padding: 0 10% 4%;}
@@ -1215,7 +1410,7 @@ footer .bloc{display: flex;flex-direction: column;width: 25%;align-items: flex-s
 footer .bloc:last-child{border-right: 0;}
 footer .bloc ul {list-style: none;padding-left: 0;display: flex;flex-direction: column;gap: 5px;}
 footer .bloc ul li a{color: var(--white);}
-footer .bloc ul li a:hover{opacity: 1;color: var(--light);}
+footer .bloc ul li a:hover,footer .bloc ul li a.active{opacity: 1;color: var(--light);}
 .btn-rs{display: flex;gap: 20px;margin-top: 20px;}
 header .btn-rs {margin-top: 0;margin-bottom: 20px;}
 .btn-rs span {background: #6969692e;width: 45px;height: 45px;display: flex;justify-content: center;align-items: center;border-radius: 50%;cursor: pointer;transition: all .3s linear;}
