--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'); @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css'); :root {
-    --title-font: "Open Sans";
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css'); :root {
+    --title-font: "Playfair Display";
     --main-font: "Open Sans";
     --container-size: 1200px;
     --white: #ffffff;
@@ -28,9 +30,9 @@ ul {
 .preloader {
     position: fixed;
     z-index: 99999999;
-    height: 110vh;
+    height: 100vh;
     width: 100%;
-    background: var(--white);
+    background: var(--dark);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,16 +44,17 @@ ul {
 }
 
 .preloader img {
-    width: 230px;
+    width: 300px;
 }
 
 .txt-loading {
-    font-size: 8em;
+    font-size: 5em;
     text-align: center;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-    user-select: none
+    user-select: none;
+    word-spacing: 10px;
 }
 
 .txt-loading .letters-loading {
@@ -61,13 +64,13 @@ ul {
 .txt-loading .letters-loading:before {
     -webkit-animation: 4s infinite letters-loading;
     animation: 4s infinite letters-loading;
-    color: #d8d8d8;
+    color: #1e1e1e42;
     content: attr(data-text-preloader);
     left: 0px;
     opacity: 0;
     position: absolute;
     -webkit-transform: rotateY(-90deg);
-    top: -28px;
+    top: -25px;
     transform: rotateY(-90deg)
 }
 
@@ -112,12 +115,12 @@ ul {
 }
 
 .txt-loading .letters-loading {
-    color: #ffffff29;
+    color: #adadad4d;
     font-family: var(--title-font);
 }
 
 .txt-loading .letters-loading:before {
-    color: var(--light);
+    color: #ffffff;
     -webkit-text-fill-color: var(--color2);
 }
 
@@ -165,6 +168,7 @@ body {
     position: relative;
     min-height: 100vh;
     min-width: 100%;
+    width: 100%;
     letter-spacing: 1.5px;
     line-height: 2;
     font-weight: 100;
@@ -208,15 +212,14 @@ a {
 .newslist {
     display: grid;
     grid-template-columns: 2fr 1.2fr;
-    padding: 10em 10% 5em;
+    padding: 8em 10% 5em;
     grid-gap: 50px;
 }
 
 .newslist aside {
     position: sticky;
     display: flex;
-    background: var(--dark);
-    padding: 2em 3em;
+    padding: 0em 2em;
 }
 
 .newslist aside .container .sticky {
@@ -327,8 +330,9 @@ a {
 
 .newslist section.news .container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+    grid-template-columns: 1fr;
+    grid-gap: 40px;
+    width: 100%;
 }
 
 .pagination {
@@ -410,12 +414,12 @@ section.contact .container form button.btn:hover {
 }
 
 .seemore {
-    color: var(--main-color);
+    color: var(--light);
     display: flex;
     gap: 10px;
     font-size: 16px;
     letter-spacing: 1px;
-    font-weight: 800;
+    font-weight: 100;
     opacity: 1;
 }
 
@@ -497,7 +501,7 @@ div.infos {
     display: flex;
     justify-content: space-between;
     padding: 10px 0%;
-    gap: 20px;
+    gap: 15px;
     border-bottom: 1px solid #ffffff24;
     margin: 0 10%;
 }
@@ -532,7 +536,8 @@ section.contact .container div.infos .item span.ico {
     height: auto;
     background: transparent;
     color: var(--white);
-    font-size: 17px;
+    font-size: 16px;
+    display: none;
 }
 
 section.contact .container div.infos .item span.ico:before {
@@ -556,7 +561,7 @@ div.infos .item a {
 .banner {
     grid-template-columns: 1.4fr 1fr;
     grid-gap: 5%;
-    padding: 9% 10% 5%;
+    padding: 9% 10% 9%;
 }
 
 .banner .slogan {
@@ -586,7 +591,7 @@ div.infos .item a {
 }
 
 .banner .slogan p {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 200;
     margin-bottom: 0em;
     letter-spacing: 1.5px;
@@ -684,19 +689,18 @@ main section {
 }
 
 section.contact {
-    padding-top: 6%;
+    padding-top: 4%;
 }
 
 section.contact .container {
     display: flex;
-    gap: 2%;
+    gap: 40px;
     justify-content: space-between;
 }
 
 section.contact .container .img-bloc {
     width: 40%;
     border-radius: var(--border-radius);
-    height: auto;
 }
 
 section.newsletter {
@@ -724,11 +728,12 @@ section.contact .container div.infos {
     margin: 0;
     border: 0;
     justify-content: center;
-    padding: 2% 4%;
+    padding: 0% 4% 2%;
     background: #173709;
     backdrop-filter: blur(10px);
-    width: 30%;
+    width: 38%;
     text-align: center;
+    border-radius: var(--border-radius);
 }
 
 section.contact .container div.infos .item {
@@ -773,7 +778,7 @@ section.contact .container div.infos h2 {
 
 section.contact .container form input,section.contact .container form textarea {
     width: 100%;
-    padding: 18px;
+    padding: 15px 18px;
     background: #00000026;
     border: 1px solid #ffffff00;
     font-size: 16px;
@@ -788,13 +793,13 @@ section.contact .container form input:focus, section.contact .container form tex
 }
 
 textarea#message {
-    min-height: 340px;
+    min-height: 203px;
 }
 
 section.contact .container form {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
 }
 
 section.contact .container form button {
@@ -809,7 +814,7 @@ section.contact .container form button {
 
 section.contact .container .form {
     position: relative;
-    width: 65%;
+    width: 60%;
     padding: 4% 4%;
     background: #173709;
     background-size: cover;
@@ -873,7 +878,7 @@ section.servicelist .service-item .description h2 {
 
 main section.about {
     grid-template-columns: 1fr 1fr;
-    grid-gap: 8%;
+    grid-gap: 4%;
     align-items: center;
 }
 
@@ -915,18 +920,19 @@ main section .subtitle.center,.center {
 .text-bloc {
     flex-direction: column;
     justify-content: flex-start;
-    gap: 15px;
+    gap: 25px;
 }
 
 main section.about .jumbotron {
-    padding: 20px 20px;
+    padding: 25px;
     font-weight: 300;
     display: flex;
     align-items: flex-start;
     letter-spacing: 1px;
-    gap: 10px;
-    border: 1px solid #f0b54724;
+    gap: 20px;
+    border: 1px solid #ffffff29;
     line-height: 1.7;
+    font-size: 15px;
 }
 
 main section.about .jumbotron:nth-child(2) {
@@ -937,11 +943,11 @@ main section.about .jumbotron:nth-child(2) {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #ffffff14;
+    background: #ffffff1c;
     position: relative;
-    font-size: 22px;
+    font-size: 40px;
     padding: 12px 12px;
-    color: var(--main-color);
+    color: var(--white);
     border-radius: var(--body-size);
     opacity: .5;
 }
@@ -955,7 +961,7 @@ main section.about .jumbotron:nth-child(2) span {
     font-family: var(--title-font);
     letter-spacing: 1px;
     font-weight: 400;
-    color: var(--main-color);
+    color: var(--light);
 }
 
 .img-bloc {
@@ -998,8 +1004,8 @@ main section.services .services-list {
 
 main section.services .btn-nav {
     position: absolute;
-    top: 14%;
-    right: 11%;
+    top: 12%;
+    right: 10.5%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1063,6 +1069,8 @@ main section.services .service-card h3 {
     letter-spacing: 2px;
     font-weight: 100;
     font-size: 20px;
+    color: var(--white);
+    text-align: center;
 }
 
 .swiper-button-next,.swiper-button-prev {
@@ -1145,20 +1153,21 @@ main section.stats .item-count {
 }
 
 main section.stats .item-count span:nth-child(1) {
-    color: var(--light);
-    font-family: var(--main-font);
-    font-size: 60px;
+    color: var(--white);
+    font-family: var(--title-font);
+    font-size: 65px;
     font-weight: 100;
-    opacity: 1;
+    opacity: .5;
 }
 
 main section.stats .item-count span {
-    font-weight: 100;
+    font-weight: 200;
     letter-spacing: 1.5px;
     transition: all .3s linear;
     line-height: 1.5;
-    font-size: 20px;
-    opacity: 0.5;
+    font-size: 18px;
+    opacity: 1;
+    color: var(--light);
 }
 
 main section.stats .item-count span:hover {
@@ -1170,6 +1179,14 @@ main section.atout {
     flex-direction: column;
     align-items: center;
     gap: 50px;
+}
+
+section.atout {
+    padding: 2% 10%;
+}
+
+section.atout .title {
+    display: none;
 }
 
 main section.atout .container {
@@ -1198,8 +1215,8 @@ main section.atout .container {
 }
 
 .default-card span {
-    width: 70px;
-    height: 70px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     transition: all .3s linear;
     display: flex;
@@ -1222,6 +1239,7 @@ section#testimony {
     display: flex;
     padding-bottom: 10em;
     line-height: 1.2;
+    padding-top: 10%;
 }
 
 .blog-slider {
@@ -1455,7 +1473,8 @@ section#testimony {
 
 .tarif-card span i {
     color: var(--light);
-    font-size: 35px;
+    font-size: 40px;
+    letter-spacing: 0px;
 }
 
 .default-card:hover a.seemore {
@@ -1466,7 +1485,8 @@ section#testimony {
     letter-spacing: 2px;
     font-weight: 400;
     padding: 0;
-    font-size: 15px;
+    font-size: 18px;
+    color: var(--light);
 }
 
 .atout .default-card p {
@@ -1493,7 +1513,7 @@ section.tarifs .title {
 section.tarifs .container {
     display: flex;
     justify-content: center;
-    gap: 50px;
+    gap: 30px;
 }
 
 .tarif-card {
@@ -1528,7 +1548,7 @@ section.tarifs .container {
 }
 
 .tarif-card:hover span i {
-    font-size: 30px;
+    font-size: 45px;
     color: var(--dark);
 }
 
@@ -1665,9 +1685,9 @@ section.cases .container .mix {
 
 section.accordion .container {
     margin: 0 auto;
-    padding: 4rem;
+    padding: 0;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 10%;
+    grid-gap: 5%;
 }
 
 section.accordion .container .accordion {
@@ -1790,8 +1810,12 @@ section.news {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 50px;
-    padding-bottom: 8%;
+    gap: 20px;
+}
+
+section.news h3.new-title {
+    font-size: 20px;
+    text-transform: math-auto;
 }
 
 section.newItem {
@@ -1807,6 +1831,8 @@ section.newItem {
     justify-content: space-between;
     width: 100%;
     margin: 30px 0 0;
+    border-top: 1px solid #ffffff1f;
+    padding-top: 40px;
 }
 
 .btn-retour {
@@ -1823,6 +1849,10 @@ section.newItem {
 section.newItem .new-header h3 {
     font-size: 40px;
     font-weight: 900;
+    text-transform: uppercase;
+}
+
+section.newItem h3,section.newItem h4,section.newItem h5,section.newItem h6 {
     text-transform: uppercase;
 }
 
@@ -1908,7 +1938,8 @@ section.news .title {
 
 section.news .container {
     display: flex;
-    gap: 4%;
+    gap: 2%;
+    justify-content: center;
 }
 
 .item-new {
@@ -1921,7 +1952,7 @@ section.news .container {
 }
 
 .img-new {
-    height: 300px;
+    height: 450px;
     overflow: hidden;
 }
 
@@ -1948,14 +1979,26 @@ section.newItem .img-new img {
     transform: scale(1.2);
     filter: brightness(0.6);
 }
+.new-header{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px;
+    padding-bottom: 4px;
+    width: 100%;
+}
 
+.new-header .date {
+    color: var(--light);
+}
 .new-body {
     padding: 30px 30px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
     font-weight: 200;
     letter-spacing: 1.5px;
+    position: relative;
 }
 
 .new-body p {
@@ -1967,19 +2010,52 @@ section.newItem .new-body {
 }
 
 .new-body .date {
-    color: var(--light);
+    color: #141414;
     letter-spacing: 1px;
-    font-weight: 300;
     font-size: 14px;
+    position: absolute;
+    top: -30px;
+    right: 35px;
+    background: #f6bb14;
+    padding: 5px 20px;
+    font-weight: 400;
+    box-shadow: 10px 10px 40px #00000047;
+    transform: rotate(0deg);
+    backdrop-filter: blur(10px);
 }
+
+.new-body .date:after {
+    content: "";
+    position: absolute;
+    width: 15px;
+    height: 30px;
+    right: -15px;
+    top: 0%;
+    background: #ffffff;
+    z-index: 0;
+    clip-path: polygon(0 0, 0 0, 75% 100%, 0% 100%);
+    transform: rotateY(0deg);
+}
+
+.new-body .date:before {
+    content: "";
+    position: absolute;
+    width: 23px;
+    height: 19px;
+    right: -23px;
+    bottom: 0px;
+    /* background: #595856; */
+    z-index: 0;
+    clip-path: polygon(0 0, 50% 0, 0 100%, 0 100%);
+}
+
 
 section.map {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 3em;
-    padding: 0 10% 4%;
+    gap: 25px;
 }
 
 section.map .container {
@@ -2052,16 +2128,17 @@ section.map .zone:hover iframe {
 }
 
 h3.new-title {
-    font-size: 18px;
+    font-size: 40px;
     line-height: 1.2;
     font-style: normal;
     font-weight: 500;
     letter-spacing: 1px;
     color: var(--white);
+    text-transform: uppercase;
 }
 
 footer {
-    padding: 7% 10% 2%;
+    padding: 2% 10% 2%;
     /* background: var(--dark); */
 }
 
@@ -2077,7 +2154,7 @@ footer .bloc {
     flex-direction: column;
     width: 25%;
     align-items: flex-start;
-    gap: 0px;
+    gap: 5px;
     border-right: 1px solid #ffffff21;
     text-align: left;
 }
@@ -2140,7 +2217,7 @@ footer .bloc span:hover {
 }
 
 footer .bloc h3 {
-    font-size: 20px;
+    font-size: 22px;
     letter-spacing: 1px;
     font-style: normal;
     color: var(--light);
@@ -2292,6 +2369,8 @@ section.footer-2 i {
 }
 
 @media(max-width: 991px) {
+    .preloader img{width: 150px;}
+    .preloader {height: 110vh;}
     section.servicelist {
         grid-template-columns: 1fr 1fr;
         padding: 8% 5%;
@@ -2610,6 +2689,7 @@ section.footer-2 i {
 }
 
 @media screen and (max-width: 768px) {
+    .preloader img{width: 100px;}
     section.newItem .img-new{height: 300px;}
     section.newItem .new-header h3{font-size: 30px;}
     h1, h2, h3, h4, h5, h6{font-size: 1.5em;line-height: 1.5;}
@@ -2620,79 +2700,23 @@ section.footer-2 i {
     .banner{min-height: 350px;}
     header ul li a{font-size: 25px;}
     header nav ul.flex.opened{gap: 20px;}
-    .newslist section.news .container {
-        grid-template-columns: 1fr;
-    }
-
-    .banner .slogan h1, .banner.interne .slogan h1 {
-        font-size: 25px;
-    }
-
-    section.servicelist {
-        grid-template-columns: 1fr;
-    }
-
-    section.servicelist .service-item {
-        grid-gap: 10px;
-    }
-
-    section.about.grid .title {
-        font-size: var(--title-size);
-    }
-
-    section.servicelist .service-item {
-        grid-template-columns: 1fr
-    }
-
-    :root {
-        --title-size: 16px;
-    }
-
-    .banner {
-        padding-top: 15%;
-    }
-
-    .banner .slogan h1 {
-        font-size: 22px;
-    }
-
-    section.contact .container {
-        flex-wrap: wrap;
-    }
-
-    section.contact .container .form,section.contact .container div.infos {
-        width: 100%;
-    }
-
-    main section.services .service-card h3 {
-        font-size: 18px;
-        width: 100%;
-        text-align: center;
-    }
-
-    section.cases button {
-        padding: 10px 20px;
-    }
-
-    main section .title {
-        font-size: 15px;
-        margin-bottom: 10px;
-    }
-
-    .footer-1 {
-        padding-bottom: 10%
-    }
-
-    section.map {
-        gap: 20px
-    }
-
-    .newsletter {
-        flex-direction: column;
-        width: 100%;
-        gap: 20px;
-    }
-
+    .newslist section.news .container{grid-template-columns: 1fr;}
+    .banner .slogan h1, .banner.interne .slogan h1{font-size: 25px;}
+    section.servicelist{grid-template-columns: 1fr;}
+    section.servicelist .service-item{grid-gap: 10px;}
+    section.about.grid .title{font-size: var(--title-size);}
+    section.servicelist .service-item{grid-template-columns: 1fr}
+    :root{--title-size: 16px;}
+    .banner{padding-top: 15%;}
+    .banner .slogan h1{font-size: 22px;}
+    section.contact .container{flex-wrap: wrap;}
+    section.contact .container .form,section.contact .container div.infos{width: 100%;}
+    main section.services .service-card h3{font-size: 18px;width: 100%;text-align: center;}
+    section.cases button{padding: 10px 20px;}
+    main section .title{font-size: 15px;margin-bottom: 10px;}
+    .footer-1{padding-bottom: 10%}
+    section.map{gap: 20px}
+    .newsletter{flex-direction: column;width: 100%;gap: 20px;}
     .newsletter h3 {
         text-align: center;
         font-size: 42px;
@@ -2823,19 +2847,16 @@ section.footer-2 i {
         padding-bottom: 2em;
     }
 
-    .blog-slider__button {
+    .blog-slider__button{
         width: 100%;
     }
-
     .blog-slider__content {
         padding: 5em 0 0;
     }
-
     .blog-slider__item.swiper-slide-active .blog-slider__content > * {
         font-size: 17px;
     }
-
-    .blog-slider__img {
+    .blog-slider__img{
         width: 100px;
         height: 100px;
     }
